welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not enough arguments for method apply: (index: Int)Char in class StringOps.
Unspecified value parameter index.
  if (litMessage()=="R"()) {
                       ^BDRBuggle:26: error: not found: value LitMessage
  	 if (LitMessage()=="Z") {
             ^BDRBuggle:29: error: not found: value LitMessage
     if (LitMessage()=="Y") {
         ^BDRBuggle:33: error: not found: value LitMessage
  	 if (LitMessage()=="X") {
             ^